[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/DeadScreenFrame.png" type="Texture" id=1]
[ext_resource path="res://Main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/RadialLight.png" type="Texture" id=3]
[ext_resource path="res://UnsadedCanvas.tres" type="Material" id=4]
[ext_resource path="res://Scripts/DeadScreen.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "RestartIn"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Restart/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Restart/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "RestartOut"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Restart/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Restart/Light2D:energy")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "ToMenuIn"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ToMenu/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ToMenu/Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "ToMenuOut"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ToMenu/Label:custom_constants/shadow_offset_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ToMenu/Light2D:energy")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}

[node name="DeathScreenCanvas" type="CanvasLayer"]
layer = 2
script = ExtResource( 5 )

[node name="DeathScreen" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DeathScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -250.0
margin_right = 350.0
margin_bottom = 250.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathLabel" type="Label" parent="DeathScreen/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -170.0
margin_right = 100.0
margin_bottom = -140.0
rect_min_size = Vector2( 200, 30 )
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 100, 15 )
text = "DEAD_SCREEN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="HBoxContainer" parent="DeathScreen/TextureRect"]
margin_left = 50.0
margin_top = 140.0
margin_right = 350.0
margin_bottom = 160.0
rect_min_size = Vector2( 300, 20 )
rect_scale = Vector2( 2, 2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeathScreen/TextureRect/Score"]
margin_right = 150.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 20 )
custom_colors/font_color = Color( 0.470588, 1, 1, 1 )
text = "SCORE"
align = 1
valign = 1

[node name="CurScore" type="Label" parent="DeathScreen/TextureRect/Score"]
margin_left = 153.0
margin_right = 303.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 20 )
custom_colors/font_color = Color( 0.470588, 1, 1, 1 )
text = "9999999"
align = 1
valign = 1

[node name="Counters" type="GridContainer" parent="DeathScreen/TextureRect"]
margin_left = 50.0
margin_top = 180.0
margin_right = 650.0
margin_bottom = 330.0
rect_min_size = Vector2( 600, 150 )
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimePanel" type="Panel" parent="DeathScreen/TextureRect/Counters"]
margin_right = 290.0
margin_bottom = 70.0
rect_min_size = Vector2( 290, 70 )

[node name="Time" type="VBoxContainer" parent="DeathScreen/TextureRect/Counters/TimePanel"]
margin_right = 290.0
margin_bottom = 70.0
rect_min_size = Vector2( 290, 70 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeathScreen/TextureRect/Counters/TimePanel/Time"]
margin_top = 3.0
margin_right = 290.0
margin_bottom = 33.0
rect_min_size = Vector2( 290, 30 )
custom_colors/font_color = Color( 0.470588, 1, 0.470588, 1 )
text = "TIME"
align = 1
valign = 1

[node name="CurTime" type="Label" parent="DeathScreen/TextureRect/Counters/TimePanel/Time"]
margin_top = 36.0
margin_right = 290.0
margin_bottom = 66.0
rect_min_size = Vector2( 290, 30 )
custom_colors/font_color = Color( 0.470588, 1, 0.470588, 1 )
text = "999:99"
align = 1
valign = 1

[node name="WavesPanel" type="Panel" parent="DeathScreen/TextureRect/Counters"]
margin_left = 310.0
margin_right = 600.0
margin_bottom = 70.0
rect_min_size = Vector2( 290, 70 )

[node name="Waves" type="VBoxContainer" parent="DeathScreen/TextureRect/Counters/WavesPanel"]
margin_right = 290.0
margin_bottom = 70.0
rect_min_size = Vector2( 290, 70 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeathScreen/TextureRect/Counters/WavesPanel/Waves"]
margin_top = 3.0
margin_right = 290.0
margin_bottom = 33.0
rect_min_size = Vector2( 290, 30 )
custom_colors/font_color = Color( 0.866667, 0.447059, 1, 1 )
text = "WAVES"
align = 1
valign = 1

[node name="CurWaves" type="Label" parent="DeathScreen/TextureRect/Counters/WavesPanel/Waves"]
margin_top = 36.0
margin_right = 290.0
margin_bottom = 66.0
rect_min_size = Vector2( 290, 30 )
custom_colors/font_color = Color( 0.866667, 0.447059, 1, 1 )
text = "9999"
align = 1
valign = 1

[node name="KillsPanel" type="Panel" parent="DeathScreen/TextureRect/Counters"]
margin_top = 80.0
margin_right = 290.0
margin_bottom = 150.0
rect_min_size = Vector2( 290, 70 )

[node name="Kills" type="VBoxContainer" parent="DeathScreen/TextureRect/Counters/KillsPanel"]
margin_right = 290.0
margin_bottom = 70.0
rect_min_size = Vector2( 290, 70 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeathScreen/TextureRect/Counters/KillsPanel/Kills"]
margin_top = 3.0
margin_right = 290.0
margin_bottom = 33.0
rect_min_size = Vector2( 290, 30 )
custom_colors/font_color = Color( 1, 0.345098, 0.345098, 1 )
text = "KILLS"
align = 1
valign = 1

[node name="CurKills" type="Label" parent="DeathScreen/TextureRect/Counters/KillsPanel/Kills"]
margin_top = 36.0
margin_right = 290.0
margin_bottom = 66.0
rect_min_size = Vector2( 290, 30 )
custom_colors/font_color = Color( 1, 0.345098, 0.345098, 1 )
text = "99999"
align = 1
valign = 1

[node name="MoneysPanel" type="Panel" parent="DeathScreen/TextureRect/Counters"]
margin_left = 310.0
margin_top = 80.0
margin_right = 600.0
margin_bottom = 150.0
rect_min_size = Vector2( 290, 70 )

[node name="Moneys" type="VBoxContainer" parent="DeathScreen/TextureRect/Counters/MoneysPanel"]
margin_right = 290.0
margin_bottom = 70.0
rect_min_size = Vector2( 290, 70 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeathScreen/TextureRect/Counters/MoneysPanel/Moneys"]
margin_top = 3.0
margin_right = 290.0
margin_bottom = 33.0
rect_min_size = Vector2( 290, 30 )
custom_colors/font_color = Color( 1, 1, 0.392157, 1 )
text = "MONEYS"
align = 1
valign = 1

[node name="CurMoneys" type="Label" parent="DeathScreen/TextureRect/Counters/MoneysPanel/Moneys"]
margin_top = 36.0
margin_right = 290.0
margin_bottom = 66.0
rect_min_size = Vector2( 290, 30 )
custom_colors/font_color = Color( 1, 1, 0.392157, 1 )
text = "999999999"
align = 1
valign = 1

[node name="DeadScreenTip" type="Label" parent="DeathScreen/TextureRect"]
margin_left = 50.0
margin_top = 320.0
margin_right = 650.0
margin_bottom = 380.0
rect_min_size = Vector2( 600, 60 )
text = "DEAD_SCREEN_TIP"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="DeathScreen/TextureRect"]
margin_left = 50.0
margin_top = 370.0
margin_right = 350.0
margin_bottom = 450.0
rect_min_size = Vector2( 300, 80 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeathScreen/TextureRect/Restart"]
material = ExtResource( 4 )
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
rect_scale = Vector2( 2, 2 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 10
text = "RESTART"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="DeathScreen/TextureRect/Restart"]
position = Vector2( 150, 40 )
scale = Vector2( 1.2, 0.4 )
z_as_relative = false
texture = ExtResource( 3 )
energy = 0.0
range_layer_max = 2

[node name="ToMenu" type="Button" parent="DeathScreen/TextureRect"]
margin_left = 350.0
margin_top = 370.0
margin_right = 650.0
margin_bottom = 450.0
rect_min_size = Vector2( 300, 80 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeathScreen/TextureRect/ToMenu"]
material = ExtResource( 4 )
margin_right = 150.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
rect_scale = Vector2( 2, 2 )
custom_colors/font_color_shadow = Color( 0.14902, 0.137255, 0.2, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 10
text = "TO_MENU"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="DeathScreen/TextureRect/ToMenu"]
position = Vector2( 150, 40 )
scale = Vector2( 1.2, 0.4 )
texture = ExtResource( 3 )
energy = 0.0
range_layer_max = 2

[node name="RestartA" type="AnimationPlayer" parent="DeathScreen/TextureRect"]
anims/RestartIn = SubResource( 1 )
anims/RestartOut = SubResource( 2 )

[node name="ToMenuA" type="AnimationPlayer" parent="DeathScreen/TextureRect"]
anims/ToMenuIn = SubResource( 3 )
anims/ToMenuOut = SubResource( 4 )
[connection signal="mouse_entered" from="DeathScreen/TextureRect/Restart" to="." method="_on_Restart_mouse_entered"]
[connection signal="mouse_exited" from="DeathScreen/TextureRect/Restart" to="." method="_on_Restart_mouse_exited"]
[connection signal="pressed" from="DeathScreen/TextureRect/Restart" to="." method="_on_Restart_pressed"]
[connection signal="mouse_entered" from="DeathScreen/TextureRect/ToMenu" to="." method="_on_ToMenu_mouse_entered"]
[connection signal="mouse_exited" from="DeathScreen/TextureRect/ToMenu" to="." method="_on_ToMenu_mouse_exited"]
[connection signal="pressed" from="DeathScreen/TextureRect/ToMenu" to="." method="_on_ToMenu_pressed"]
